# rust100

sheeva/: Cargo.toml
sheeva/assets/: funcs.txt  scenarios.txt  text.txt
sheeva/assets/scenarios/: complex.txt  nested.txt  simple.txt
sheeva/src/: command.rs  iterators.rs  lib.rs  main.rs  parser.rs  scenario.rs  tree.rs
tree/: Cargo.toml
tree/assets/: complex.txt  nested.txt  simplest.txt  task.txt
tree/src/: iterators.rs  main.rs  parser.rs  tree.rs
weather/: Cargo.toml
weather/src/: main.rs  weather.rs
weather/src/weather/: data.rs
