[package]
name = "weather"
version = "0.1.0"
authors = ["ardazishvili <ardazishvili.roman@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = {version = "1.0.105" , features = ["derive"]}
http = "0.2.1"
structopt = "0.3.12"
